# espeakng-loader

./: .gitmodules  README.md  build.sh  hatch_build.py  pyproject.toml
.github/workflows/: build.yml  pypi.yml
src/espeakng_loader/: __init__.py
